--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -67,8 +67,8 @@
 }
 
 .feature-icon {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     margin-right: 1rem;
     flex-shrink: 0;
     color: #4285f4;
